<resources>
    <string name="app_name">MHMonitor</string>
    <string name="nie_wyslano_dostawy_toast">Nie udało się wysłać dostawy na serwer…</string>
    <string name="dostawa_wyslana_toast">Dostawa utworzona!</string>
    <string name="logistyk">Logistyk</string>
    <string name="magazynier">Magazynier</string>
    <string name="generuj_plan_dostaw">Generuj plan dostaw</string>
    <string name="wy_wietl_dostawc_w">Wyświetl dostawców</string>
    <string name="wait">Wait...</string>
    <string name="nazwa_dostawcy">Nazwa dostawcy</string>
    <string name="dodaj">Dodaj</string>
    <string name="ilo">Ilość/potrzeba</string>
    <string name="nazwa_towaru">Nazwa towaru</string>
    <string name="zamow_dost">Zamów dostawę</string>
    <string name="anuluj_dostaw">Anuluj dostawę</string>
    <string name="dostepne_w_krotce">Funkcjonalność dostępna wkrótce</string>
    <string name="magahurtomonitor">MagaHurtoMonitor</string>
    <string name="wpisz">Wpisz</string>
    <string name="skanuj">Skanuj</string>
    <string name="anuluj">Anuluj</string>
    <string name="potwierdz">Potwierdź</string>
    <string name="textview">TextView</string>
    <string name="sortuj">Sortuj</string>
    <string name="liczba_zlecen">Liczba zleceń</string>
    <string name="icon">icon</string>
    <string name="obs_uga_dostaw">Obsługa dostaw</string>
    <string name="nazwa">Nazwa</string>
    <string name="regal">Regał</string>
    <string name="polka">Półka</string>
    <string name="ilosc">Ilość</string>
    <string name="skan">Skan</string>
    <string name="zamowienie00001">Zamowienie00001</string>
    <string name="button">Button</string>
    <string name="numer_zam_wienia">Numer zamówienia</string>
    <string name="data_zam_wienia">Data zamówienia</string>
</resources>
