<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_dostawcy_sort"
        android:title="@string/sortuj"
        app:showAsAction="ifRoom" />
</menu>