...
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/profil_avatar"
        app:layout_constraintStart_toStartOf="@+id/profil_avatar"
        app:layout_constraintTop_toBottomOf="@+id/profil_avatar" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
...
